# UIRS

./: .dockerignor  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: build-deploy.yml  main.yml
src/: ingredients_config.yaml  logging_conf.json  main.py  unit_config.yaml
src/api/dependencies/: auth.py  database.py  event.py  mealplan.py  ml.py  pagination.py
src/api/v1/: __init__.py  auth.py  comment.py  employee.py  event.py  ingredient.py  like.py  mealplan.py  ml.py  recipe.py  report.py  tag.py  user.py
src/core/: config.py  constant.py  events.py  security.py  token.py
src/core/settings/: app.py  base.py  dev.py  prod.py
src/database/: events.py
src/database/migrations/: env.py
src/database/migrations/versions/: 090093ed29a2_fix.py  0eaa48d7f292_fix.py  13deebb12c9d_fix.py  185a602c9f23_add_likes_for_recepie.py  1b40212d02c2_initial_migration.py  23397cd6ab90_fix_enum.py  3a57009e92e9_fix.py  (+21 more)
src/models/: __init__.py  comment.py  employee.py  event.py  mealplan.py  recipe.py  rwmodel.py  user.py
src/schemas/: auth.py  comment.py  common.py  employee.py  event.py  ingredient.py  mealplan.py  ml.py  recipe.py  report.py  tag.py  user.py
src/services/: auth.py  comment.py  employee.py  event.py  ingredient.py  like.py  mealplan.py  ml.py  recipe.py  report.py  tag.py  users.py
src/utils/: __init__.py  custom_logging.py  init_ingredients.py  init_units.py  ml_connection.py
static/: swagger_custom.css
